--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,8 +2,12 @@
 command = '''
   # Download the static build of ffmpeg
   curl -L https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz -o ffmpeg.tar.xz &&
-  # Extract the archive
+  # Extract the downloaded archive
   tar -xf ffmpeg.tar.xz &&
-  # Copy the ffmpeg binary into a directory in PATH
-  cp ffmpeg-*-static/ffmpeg /usr/local/bin/ffmpeg
+  # Copy the ffmpeg binary to /usr/bin (commonly in PATH)
+  cp ffmpeg-*-static/ffmpeg /usr/bin/ffmpeg &&
+  # Ensure the binary is executable
+  chmod +x /usr/bin/ffmpeg &&
+  # Optional: Print the installed ffmpeg version for confirmation
+  ffmpeg -version
 '''
