--- a/railway.toml
+++ b/railway.toml
@@ -1,22 +1,13 @@
 [build]
-builder = "nixpacks"
-buildCommand = """
-#!/bin/bash
-echo "Installing FFmpeg..."
-mkdir -p /tmp/ffmpeg
-cd /tmp/ffmpeg
-curl -L https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz -o ffmpeg.tar.xz
-tar -xf ffmpeg.tar.xz --strip-components=1
-cp bin/ffmpeg /usr/local/bin/
-chmod +x /usr/local/bin/ffmpeg
-cd /
-rm -rf /tmp/ffmpeg
-echo "FFmpeg installation complete:"
-ffmpeg -version
-"""
-
-[deploy]
-startCommand = "python tunecast.py"
-healthcheckPath = "/"
-healthcheckTimeout = 100
-restartPolicyType = "never"
+command = '''
+  apt-get update && 
+  apt-get install -y wget xz-utils &&
+  wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz &&
+  mkdir -p ffmpeg-temp &&
+  tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz -C ffmpeg-temp --strip-components=1 &&
+  cp ffmpeg-temp/bin/ffmpeg /usr/local/bin/ &&
+  chmod +x /usr/local/bin/ffmpeg &&
+  rm -rf ffmpeg-temp ffmpeg-master-latest-linux64-gpl.tar.xz &&
+  echo "ffmpeg installed:" &&
+  ffmpeg -version
+'''
