--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,8 @@
 [build]
-command = '''
-  apt-get update && 
-  apt-get install -y wget xz-utils &&
-  wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz &&
-  mkdir -p ffmpeg-temp &&
-  tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz -C ffmpeg-temp --strip-components=1 &&
-  cp ffmpeg-temp/bin/ffmpeg /usr/local/bin/ &&
-  chmod +x /usr/local/bin/ffmpeg &&
-  rm -rf ffmpeg-temp ffmpeg-master-latest-linux64-gpl.tar.xz &&
-  echo "ffmpeg installed:" &&
-  ffmpeg -version
-'''
+builder = "nixpacks"
+
+[deploy]
+startCommand = "bash ./setup_and_start.sh"
+healthcheckPath = "/"
+healthcheckTimeout = 100
+restartPolicyType = "never"
